--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/inicio_sesion1.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/inicio_sesion1.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -39,20 +40,23 @@
                         <Font name="Segoe UI Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="textfieldUsuario" />
+                  <TextField fx:id="textfieldUsuario">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font></TextField>
                   <Label text="Contraseña" textFill="#0e103c">
                      <font>
                         <Font name="Segoe UI Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="textfieldContrasena" />
-                  <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-spacing: 5;">
+                  <PasswordField fx:id="textfieldContrasena" />
+                  <Label fx:id="labelError" alignment="CENTER" prefHeight="15.0" prefWidth="233.0" style="-fx-background-color: white;" textFill="WHITE">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
+                  <VBox fx:id="vbox" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-spacing: 5;">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#clickBotonRegistrate" style="-fx-background-color: white; -fx-border-color: white;" text="Regístrate" textFill="#0e103c">
-                           <font>
-                              <Font name="Segoe UI Bold" size="12.0" />
-                           </font>
-                        </Button>
                         <Button mnemonicParsing="false" onAction="#clickBotonInicio" prefHeight="37.0" prefWidth="102.0" style="-fx-background-color: #0e103c;" text="Inicia Sesión" textFill="#f7f7f7">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
