--- a/AlmacenHierritos/src/main/resources/com/example/almacenhierritos/nuevoproveedor_almacen.fxml
+++ b/AlmacenHierritos/src/main/resources/com/example/almacenhierritos/nuevoproveedor_almacen.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -41,86 +40,58 @@
       </HBox>
       <VBox alignment="TOP_CENTER" maxWidth="911.0" prefHeight="346.0" prefWidth="900.0" style="-fx-spacing: 20;">
          <children>
-            <HBox alignment="CENTER" prefHeight="207.0" prefWidth="840.0" style="-fx-background-color: E0E7FE; -fx-spacing: 20; -fx-pref-height: fill; -fx-max-width: 844;">
+            <HBox alignment="CENTER" prefHeight="95.0" prefWidth="844.0" style="-fx-background-color: E0E7FE; -fx-pref-height: fill; -fx-max-width: 844;">
                <children>
-                  <VBox alignment="CENTER_LEFT" prefHeight="223.0" prefWidth="501.0" style="-fx-spacing: 10; -fx-padding: 20;">
+                  <VBox alignment="TOP_CENTER" prefHeight="165.0" prefWidth="497.0" style="-fx-spacing: 10; -fx-padding: 20;">
                      <children>
-                        <Label prefHeight="18.0" prefWidth="332.0" text="Empresa Proveedora" textFill="#0e103c">
+                        <Label prefHeight="18.0" prefWidth="417.0" text="Nombre Proveedor" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textfieldEmpresaProveedora">
+                        <TextField fx:id="textfieldNombreProveedor">
                            <font>
                               <Font name="Segoe UI" size="12.0" />
                            </font>
                         </TextField>
-                        <Label prefHeight="18.0" prefWidth="400.0" text="Nombre Vendedor" textFill="#0e103c">
+                        <Label prefHeight="18.0" prefWidth="400.0" text="Banco" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textfieldNombreVendedor">
+                        <TextField fx:id="textfieldBanco">
                            <font>
                               <Font name="Segoe UI" size="12.0" />
                            </font>
                         </TextField>
-                        <Label prefHeight="18.0" prefWidth="416.0" text="Nombre Producto" textFill="#0e103c">
-                           <font>
-                              <Font name="Segoe UI Bold" size="14.0" />
-                           </font>
-                        </Label>
-                        <ComboBox fx:id="comboboxNombreProducto" maxHeight="23.2" prefHeight="23.2" prefWidth="398.0" promptText="Escoge" style="-fx-background-color: white; -fx-border-color: gray; -fx-border-width: 0.3;" />
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER_LEFT" prefHeight="223.0" prefWidth="521.0" style="-fx-spacing: 10; -fx-padding: 20;">
+                  <VBox alignment="CENTER_LEFT" prefHeight="165.0" prefWidth="495.0" style="-fx-spacing: 10; -fx-padding: 20;">
                      <children>
-                        <Label prefHeight="18.0" prefWidth="332.0" text="Cantidad Producto" textFill="#0e103c">
+                        <Label prefHeight="18.0" prefWidth="332.0" text="NIT" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textfieldCantidadProducto">
+                        <TextField fx:id="textfieldNIT">
                            <font>
                               <Font name="Segoe UI" size="12.0" />
                            </font>
                         </TextField>
-                        <Label prefHeight="18.0" prefWidth="400.0" text="Precio" textFill="#0e103c">
+                        <Label prefHeight="18.0" prefWidth="400.0" text="Cuenta Bancaria" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textfieldPrecio">
+                        <TextField fx:id="textfieldCuentaBancaria">
                            <font>
                               <Font name="Segoe UI" size="12.0" />
                            </font>
                         </TextField>
                         <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-spacing: 20;">
                            <children>
-                              <VBox prefHeight="57.0" prefWidth="221.0" style="-fx-spacing: 10;">
-                                 <children>
-                                    <Label prefHeight="18.0" prefWidth="416.0" text="Forma De Pago" textFill="#0e103c">
-                                       <font>
-                                          <Font name="Segoe UI Bold" size="14.0" />
-                                       </font>
-                                    </Label>
-                                    <ComboBox fx:id="comboboxFormaPago" maxHeight="23.2" prefWidth="221.0" promptText="Escoge" style="-fx-background-color: white; -fx-border-color: gray; -fx-border-width: 0.3;" />
-                                 </children>
-                              </VBox>
-                              <VBox prefHeight="57.0" prefWidth="218.0" style="-fx-spacing: 10;">
-                                 <children>
-                                    <Label prefHeight="18.0" prefWidth="416.0" text="Porcentaje De Descuento" textFill="#0e103c">
-                                       <font>
-                                          <Font name="Segoe UI Bold" size="14.0" />
-                                       </font>
-                                    </Label>
-                                    <TextField fx:id="textfieldPorcentaje">
-                                       <font>
-                                          <Font name="Segoe UI" size="12.0" />
-                                       </font>
-                                    </TextField>
-                                 </children>
-                              </VBox>
+                              <VBox prefHeight="57.0" prefWidth="221.0" style="-fx-spacing: 10;" />
+                              <VBox prefHeight="57.0" prefWidth="218.0" style="-fx-spacing: 10;" />
                            </children>
                         </HBox>
                      </children>
