--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/balance_informes_admin.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/balance_informes_admin.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-height: 382; -fx-pref-width: 840;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.BalanceInformeController">
+<VBox fx:id="bigBox" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-height: 382; -fx-pref-width: 840;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.BalanceInformeController">
    <children>
-      <Label prefHeight="67.0" prefWidth="1013.0" style="-fx-background-color: C5D0F6; -fx-label-padding: 20;" text="Balance Mensual" textFill="WHITE">
+      <Label prefHeight="120.0" prefWidth="840.0" style="-fx-background-color: C5D0F6; -fx-label-padding: 20;" text="Balance Mensual" textFill="WHITE">
          <font>
             <Font name="Segoe UI" size="20.0" />
          </font>
       </Label>
-      <ScrollPane prefHeight="315.0" prefWidth="840.0">
-         <content>
-            <TextArea fx:id="textArea" prefHeight="1080.0" prefWidth="825.0" />
-         </content>
-      </ScrollPane>
+      <HBox alignment="TOP_CENTER" maxWidth="860.0" prefHeight="368.0" prefWidth="840.0" style="-fx-spacing: 20; -fx-pref-height: fill; -fx-max-width: 840; -fx-padding: 20;">
+         <children>
+            <VBox fx:id="VboxPequeña" alignment="CENTER_LEFT" prefHeight="328.0" prefWidth="489.0" style="-fx-spacing: 10;">
+               <TableView fx:id="table" prefHeight="275.0" prefWidth="450.0">
+                  <opaqueInsets>
+                     <Insets />
+                  </opaqueInsets></TableView>
+            </VBox>
+         </children>
+      </HBox>
    </children>
 </VBox>
