--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/informes_admin.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/informes_admin.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" spacing="20.0" style="-fx-background-color: white; -fx-padding: 0px; -fx-spacing: 0px;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.InformesController">
+<VBox prefHeight="600.0" prefWidth="900.0" spacing="20.0" style="-fx-background-color: white; -fx-padding: 0px; -fx-spacing: 0px;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.InformesController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
@@ -39,23 +35,18 @@
                         <Font name="Segoe UI Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label fx:id="botonDevoluciones" alignment="CENTER" onMouseClicked="#ClickBotonDevoluciones" prefHeight="18.0" prefWidth="138.0" text="Devoluciones" textFill="WHITE">
+                  <Button fx:id="botonVolver" maxHeight="23.0" mnemonicParsing="false" onAction="#ClickBotonVolver" prefHeight="23.0" prefWidth="164.0" style="-fx-background-color: F6F7FF; -fx-background-radius: 20; -fx-pref-height: 17; -fx-max-height: 17;" text="Volver" textFill="#0e103c">
                      <font>
-                        <Font name="Segoe UI Bold" size="13.0" />
+                        <Font name="Segoe UI Bold" size="12.0" />
                      </font>
-                  </Label>
+                  </Button>
                </children>
             </HBox>
          </children>
       </HBox>
       <VBox fx:id="VboxDisplay" alignment="TOP_CENTER" maxWidth="911.0" prefHeight="508.0" prefWidth="900.0" style="-fx-padding: 30; -fx-spacing: 20;">
          <children>
-            <Pane fx:id = "panel" prefHeight="382.0" prefWidth="840.0" />
-            <Button fx:id="botonVolver" mnemonicParsing="false" onAction="#ClickBotonVolver" prefHeight="31.0" prefWidth="124.0" style="-fx-background-color: #0e103c;" text="Volver" textFill="#f7f7f7">
-               <font>
-                  <Font name="Segoe UI Bold" size="14.0" />
-               </font>
-            </Button>
+            <Pane fx:id="panel" prefHeight="433.0" prefWidth="840.0" />
          </children></VBox>
    </children>
 </VBox>
