--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/balance_informes_admin.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/balance_informes_admin.fxml
@@ -15,11 +15,17 @@
       <HBox alignment="TOP_CENTER" maxWidth="860.0" prefHeight="368.0" prefWidth="840.0" style="-fx-spacing: 20; -fx-pref-height: fill; -fx-max-width: 840; -fx-padding: 20;">
          <children>
             <VBox fx:id="VboxPequeña" alignment="CENTER_LEFT" prefHeight="328.0" prefWidth="489.0" style="-fx-spacing: 10;">
-               <TableView fx:id="table" prefHeight="275.0" prefWidth="450.0">
-                  <opaqueInsets>
-                     <Insets />
-                  </opaqueInsets></TableView>
-            </VBox>
+               <children>
+                  <ScrollPane maxWidth="1256.0" prefHeight="275.0" prefWidth="454.0" style="-fx-background-color: E0E7FE; -fx-max-width: 840;">
+                     <content>
+                        <TableView fx:id="table" prefHeight="275.0" prefWidth="470.0">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </TableView>
+                     </content>
+                  </ScrollPane>
+               </children></VBox>
          </children>
       </HBox>
    </children>
