--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/configuracion_admin.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/configuracion_admin.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="349.0" prefWidth="560.0" style="-fx-padding: 70 px;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.ConfiguracionController">
+<VBox alignment="CENTER" prefHeight="349.0" prefWidth="560.0" style="-fx-padding: 70 px;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.ConfiguracionController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #0e103c;">
          <children>
@@ -28,61 +24,47 @@
          <children>
             <HBox alignment="CENTER" prefHeight="35.0" prefWidth="560.0" style="-fx-pref-height: 47; -fx-spacing: 20;">
                <children>
-                  <CheckBox fx:id="checkBoxDesCliente" mnemonicParsing="false" prefHeight="23.0" prefWidth="218.0" text="Descuento cliente frecuente:">
+                  <Button mnemonicParsing="false" onAction="#buttonDescuento" prefHeight="25.0" prefWidth="34.0">
                      <font>
-                        <Font name="Segoe UI Bold" size="14.0" />
-                     </font>
-                  </CheckBox>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Label prefHeight="37.0" prefWidth="173.0" text="Descuento Cliente Frecuente:" />
                   <TextField prefHeight="14.0" prefWidth="262.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="35.0" prefWidth="560.0" style="-fx-pref-height: 47; -fx-spacing: 20;">
                <children>
-                  <CheckBox fx:id="checkBoxIVA" mnemonicParsing="false" prefHeight="23.0" prefWidth="218.0" text="IVA:">
-                     <font>
-                        <Font name="Segoe UI Bold" size="14.0" />
-                     </font>
-                  </CheckBox>
+                  <Button mnemonicParsing="false" onAction="#buttonCorreo" prefHeight="25.0" prefWidth="34.0" />
+
+                  <Label prefHeight="17.0" prefWidth="173.0" text="Correo:" />
                   <TextField prefHeight="14.0" prefWidth="262.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="35.0" prefWidth="560.0" style="-fx-pref-height: 47; -fx-spacing: 20;">
                <children>
-                  <CheckBox fx:id="checkBoxNombre" mnemonicParsing="false" prefHeight="23.0" prefWidth="218.0" text="Nombre:">
-                     <font>
-                        <Font name="Segoe UI Bold" size="14.0" />
-                     </font>
-                  </CheckBox>
+                  <Button mnemonicParsing="false"  onAction="#buttonNombre"  prefHeight="25.0" prefWidth="34.0" />
+                  <Label prefHeight="17.0" prefWidth="173.0" text="Nombre:" />
                   <TextField prefHeight="14.0" prefWidth="262.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="35.0" prefWidth="560.0" style="-fx-pref-height: 47; -fx-spacing: 20;">
                <children>
-                  <CheckBox fx:id="checkBoxNIT" mnemonicParsing="false" prefHeight="23.0" prefWidth="218.0" text="NIT:">
-                     <font>
-                        <Font name="Segoe UI Bold" size="14.0" />
-                     </font>
-                  </CheckBox>
+                  <Button mnemonicParsing="false" onAction="#buttonNit" prefHeight="25.0" prefWidth="34.0" />
+                  <Label prefHeight="17.0" prefWidth="173.0" text="NIT:" />
                   <TextField prefHeight="14.0" prefWidth="262.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="35.0" prefWidth="560.0" style="-fx-pref-height: 47; -fx-spacing: 20;">
                <children>
-                  <CheckBox fx:id="checkBoxDesc" mnemonicParsing="false" prefHeight="23.0" prefWidth="218.0" text="Descripción:">
-                     <font>
-                        <Font name="Segoe UI Bold" size="14.0" />
-                     </font>
-                  </CheckBox>
+                  <Button mnemonicParsing="false" onAction="#buttonDireccion"  prefHeight="25.0" prefWidth="34.0" />
+                  <Label prefHeight="17.0" prefWidth="173.0" text="Dirección:" />
                   <TextField prefHeight="14.0" prefWidth="262.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="35.0" prefWidth="560.0" style="-fx-pref-height: 47; -fx-spacing: 20;">
                <children>
-                  <CheckBox fx:id="checkBoxTelefono" mnemonicParsing="false" prefHeight="23.0" prefWidth="218.0" text="Teléfono:">
-                     <font>
-                        <Font name="Segoe UI Bold" size="14.0" />
-                     </font>
-                  </CheckBox>
+                  <Button mnemonicParsing="false" onAction="#buttonTelefono"  prefHeight="25.0" prefWidth="34.0" />
+                  <Label prefHeight="17.0" prefWidth="173.0" text="Teléfono: " />
                   <TextField prefHeight="14.0" prefWidth="262.0" />
                </children>
             </HBox>
